US65165: Initial commit

--- a/acs-integration-tests/pom.xml
+++ b/acs-integration-tests/pom.xml
@@ -655,7 +655,7 @@
             <build>
                 <plugins>
                     <!-- run UAA -->
-                    <plugin>
+                   <!--  <plugin>
                         <groupId>org.codehaus.cargo</groupId>
                         <artifactId>cargo-maven2-plugin</artifactId>
                         <version>1.4.19</version>
@@ -705,7 +705,7 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
+                    </plugin> -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
