--- a/service/pom.xml
+++ b/service/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>security-dynamic-log-configurer</artifactId>
             <version>1.1.1</version>
         </dependency>
+<!--         <dependency>
+            <groupId>com.ge.predix.audit</groupId>
+            <artifactId>audit-service</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency> -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
