--- a/service/pom.xml
+++ b/service/pom.xml
@@ -46,11 +46,16 @@
             <artifactId>security-dynamic-log-configurer</artifactId>
             <version>1.1.1</version>
         </dependency>
-<!--         <dependency>
-            <groupId>com.ge.predix.audit</groupId>
+<!--          <dependency>
+            <groupId>com.ge.predix.audit-sdk</groupId>
             <artifactId>audit-service</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency> -->
+         <dependency>
+            <groupId>com.ge.predix.eventhub</groupId>
+            <artifactId>predix-event-hub-sdk</artifactId>
+            <version>1.1.5-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
