--- a/acs-integration-tests/pom.xml
+++ b/acs-integration-tests/pom.xml
@@ -700,7 +700,7 @@
             <build>
                 <plugins>
                     <!-- run UAA -->
-                    <plugin>
+                    <!-- <plugin>
                         <groupId>org.codehaus.cargo</groupId>
                         <artifactId>cargo-maven2-plugin</artifactId>
                         <version>1.4.19</version>
@@ -746,7 +746,7 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
+                    </plugin> -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
