--- a/acs-integration-tests/pom.xml
+++ b/acs-integration-tests/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>gremlin-driver</artifactId>
             <version>3.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>java-dse-graph</artifactId>
+            <version>1.0.0-beta1</version>
+        </dependency>
         <!-- Begin dependencies added for Hystrix circuit breaker functionality. -->
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
