--- a/service/pom.xml
+++ b/service/pom.xml
@@ -43,6 +43,11 @@
     <dependencies>
         <dependency>
             <groupId>com.ge.predix</groupId>
+            <artifactId>spring-audit-filter</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ge.predix</groupId>
             <artifactId>security-dynamic-log-configurer</artifactId>
             <version>1.1.1</version>
         </dependency>
