--- a/service/pom.xml
+++ b/service/pom.xml
@@ -42,6 +42,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-tcnative-boringssl-static</artifactId>
+            <version>1.1.33.Fork23</version>
+        </dependency>
+        <dependency>
             <groupId>com.ge.predix</groupId>
             <artifactId>security-dynamic-log-configurer</artifactId>
             <version>1.1.1</version>
