Audit INT changes

--- a/acs-integration-tests/pom.xml
+++ b/acs-integration-tests/pom.xml
@@ -41,6 +41,7 @@
         <acs.appname>acs-ci-${jenkins.build.number}</acs.appname>
         <acs.db>acs-db-ci-${jenkins.build.number}</acs.db>
         <acs.redis>acs-redis-ci-${jenkins.build.number}</acs.redis>
+        <acs.audit>acs-audit-service</acs.audit>
         <acs.cf.domain>predix-acs-integration</acs.cf.domain>
         <acs.zone.subdomain>test-zone-${zone.var}</acs.zone.subdomain>
         <cf.base.domain>${CF_BASE_DOMAIN}</cf.base.domain>
@@ -341,6 +342,8 @@
                                 <READ_ONLY_USER_PASSWORD>${READ_ONLY_USER_PASSWORD}</READ_ONLY_USER_PASSWORD>
                                 <NO_READ_ONLY_USER_PASSWORD>${NO_READ_ONLY_USER_PASSWORD}</NO_READ_ONLY_USER_PASSWORD>
                                 <ZAC_CLIENT_SECRET>${ZAC_CLIENT_SECRET}</ZAC_CLIENT_SECRET>
+                                <AUDIT_QUERY_URL>${AUDIT_QUERY_URL}</AUDIT_QUERY_URL>
+                                <AUDIT_ZONE_ID>${AUDIT_ZONE_ID}</AUDIT_ZONE_ID>
                             </systemPropertyVariables>
                             <excludes>
                                 <exclude>**/ACSPerformanceIT.java</exclude>
@@ -382,6 +385,10 @@
                             <buildpack>java-buildpack</buildpack>
                             <env>
                                 <SPRING_PROFILES_ACTIVE>integration,predix,cloud-redis,cloudDbConfig</SPRING_PROFILES_ACTIVE>
+                                <AUDIT_SERVICE_NAME>${AUDIT_SERVICE_NAME}</AUDIT_SERVICE_NAME>
+                                <AUDIT_UAA_URL>${AUDIT_UAA_URL}</AUDIT_UAA_URL>
+                                <AUDIT_UAA_CLIENT_ID>${AUDIT_UAA_CLIENT_ID}</AUDIT_UAA_CLIENT_ID>
+                                <AUDIT_UAA_CLIENT_SECRET>${AUDIT_UAA_CLIENT_SECRET}</AUDIT_UAA_CLIENT_SECRET>
                             </env>
                             <services>
                                 <service>
@@ -394,9 +401,11 @@
                                     <label>redis</label>
                                     <plan>shared-vm</plan>
                                 </service>
-<!--                                 <service> -->
-<!--                                     <name>acs-logstash</name> -->
-<!--                                 </service> -->
+                                <service>
+                                    <name>${acs.audit}</name>
+                                    <label>predix-audit</label>
+                                    <plan>beta</plan>
+                                </service>
                             </services>
                         </configuration>
                         <executions>
@@ -414,7 +423,7 @@
                                     <goal>push</goal>
                                 </goals>
                             </execution>
-                            <execution>
+                            <!-- <execution>
                                 <id>delete-services</id>
                                 <configuration>
                                     <services>
@@ -437,7 +446,7 @@
                                 <goals>
                                     <goal>delete</goal>
                                 </goals>
-                            </execution>
+                            </execution> -->
                         </executions>
                     </plugin>
                     <plugin>
@@ -500,6 +509,8 @@
                                 <READ_ONLY_USER_PASSWORD>${READ_ONLY_USER_PASSWORD}</READ_ONLY_USER_PASSWORD>
                                 <NO_READ_ONLY_USER_PASSWORD>${NO_READ_ONLY_USER_PASSWORD}</NO_READ_ONLY_USER_PASSWORD>
                                 <ZAC_CLIENT_SECRET>${ZAC_CLIENT_SECRET}</ZAC_CLIENT_SECRET>
+                                <AUDIT_QUERY_URL>${AUDIT_QUERY_URL}</AUDIT_QUERY_URL>
+                                <AUDIT_ZONE_ID>${AUDIT_ZONE_ID}</AUDIT_ZONE_ID>
                             </systemPropertyVariables>
                             <excludes>
                                 <exclude>**/ACSPerformanceIT.java</exclude>
@@ -546,6 +557,10 @@
                                 <TITAN_STORAGE_PORT>${TITAN_STORAGE_PORT}</TITAN_STORAGE_PORT>
                                 <TITAN_STORAGE_USERNAME>${TITAN_STORAGE_USERNAME}</TITAN_STORAGE_USERNAME>
                                 <TITAN_STORAGE_PASSWORD>${TITAN_STORAGE_PASSWORD}</TITAN_STORAGE_PASSWORD>
+                                <AUDIT_SERVICE_NAME>${AUDIT_SERVICE_NAME}</AUDIT_SERVICE_NAME>
+                                <AUDIT_UAA_URL>${AUDIT_UAA_URL}</AUDIT_UAA_URL>
+                                <AUDIT_UAA_CLIENT_ID>${AUDIT_UAA_CLIENT_ID}</AUDIT_UAA_CLIENT_ID>
+                                <AUDIT_UAA_CLIENT_SECRET>${AUDIT_UAA_CLIENT_SECRET}</AUDIT_UAA_CLIENT_SECRET>
                             </env>
                             <services>
                                 <service>
@@ -557,6 +572,11 @@
                                     <name>${acs.redis}</name>
                                     <label>redis</label>
                                     <plan>shared-vm</plan>
+                                </service>
+                                <service>
+                                    <name>${acs.audit}</name>
+                                    <label>predix-audit</label>
+                                    <plan>beta</plan>
                                 </service>
                             </services>
                         </configuration>
@@ -650,6 +670,7 @@
                             <excludes>
                                 <exclude>**/ACSPerformanceIT.java</exclude>
                                 <exclude>**/PolicyEvalCachingWithGraphDBIT.java</exclude>
+                                <exclude>**/PredixAuditIT.java</exclude>
                             </excludes>
                             <includes>
                                 <include>**/*IT.java</include>
@@ -703,6 +724,7 @@
                             </systemPropertyVariables>
                             <excludes>
                                 <exclude>**/ACSPerformanceIT.java</exclude>
+                                <exclude>**/PredixAuditIT.java</exclude>
                             </excludes>
                             <includes>
                                 <include>**/*IT.java</include>
@@ -738,7 +760,7 @@
             <build>
                 <plugins>
                     <!-- run UAA -->
-                    <plugin>
+                    <!-- <plugin>
                         <groupId>org.codehaus.cargo</groupId>
                         <artifactId>cargo-maven2-plugin</artifactId>
                         <version>1.4.19</version>
@@ -788,7 +810,7 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
+                    </plugin> -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
