--- a/service/pom.xml
+++ b/service/pom.xml
@@ -41,16 +41,6 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-         <dependency>
-            <groupId>org.mortbay.jetty.alpn</groupId>
-            <artifactId>alpn-boot</artifactId>
-            <version>8.1.9.v20160720</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty.alpn</groupId>
-            <artifactId>alpn-api</artifactId>
-            <version>1.1.3.v20160715</version>
-        </dependency>
         <dependency>
             <groupId>com.ge.predix</groupId>
             <artifactId>security-dynamic-log-configurer</artifactId>
@@ -181,10 +171,10 @@
                     <groupId>ch.qos.logback</groupId>
                     <artifactId>logback-classic</artifactId>
                 </exclusion>
-<!--                 <exclusion>
+                <exclusion>
                     <groupId>org.apache.tomcat.embed</groupId>
-                    <artifactId></artifactId>
-                </exclusion> -->
+                    <artifactId>tomcat-embed-el</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
